# osLabs

./: CMakeLists.txt  README.md
CP/: CMakeLists.txt  main.cpp
CP/doc/: KP.docx  KP_tit.docx
CP/include/: Allocator.h  BuddyAllocator.h  ListAllocator.h
CP/src/: BuddyAllocator.cpp  ListAllocator.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/doc/: report1.docx  titul.docx
lab2/include/: child.h  parent.h
lab2/src/: child.cpp  parent.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/doc/: report2.docx  titul.docx
lab3/include/: quicksort.h  thread_pool.h
lab3/src/: quicksort.cpp  thread_pool.cpp
lab4/: CMakeLists.txt  main.cpp  output.txt
lab4/doc/: report3.docx  titul.docx
lab4/include/: common.h  parent.h
lab4/src/: child.cpp  common.cpp  parent.cpp
lab5/: CMakeLists.txt  program1.cpp  program2.cpp
lab5-7/: CMakeLists.txt  main.cpp
lab5-7/doc/: report5-7.docx  titul.docx
lab5-7/include/: ControllerNode.h  WorkerNode.h
lab5-7/src/: ControllerNode.cpp  WorkerNode.cpp
lab5/doc/: report4.docx  titul.docx
lab5/include/: functions.h
lab5/src/: lib1.cpp  lib2.cpp
lab8/: report8.docx  titul.docx
tests/: CMakeLists.txt  CP_tests.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5-7_test.cpp  lab5_test.cpp
